[package]
name = "block-hand-provided_code-generator"
version = "0.0.1"
description = "block-hand-provided_code-generator"
authors = ["Solidity Materials Co., Ltd. <corporation@soliditymaterials.com>"]
license = "Copyright © 2024 Solidity Materials Co., Ltd. All Rights Reserved"
repository = "https://github.com/yaaman18/block-hand-provided_code-generator"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bs58 = "0.5.0"
sha3 = "0.10.8"
